added icon card

--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header class="header-main"> 
+        <nav class="header-container"> 
+            <div class="header-style display-flex aling"> 
+                <h2>School</h2> 
+                <img src="assets/logo.png" alt="">
+            </div> 
+            <ul class="nav-links"> 
+                <li><a href="" class="nav-link home">Home</a></li> 
+                <li><a href="" class="nav-link about">About</a></li> 
+                <li><a href="" class="nav-link facilities">Facilities</a></li> 
+                <li><a href="" class="nav-link admission">Admission</a></li> 
+            </ul> 
+            <button class="button">Contact</button> 
+            <img class="menubar" src="assets/menu bar Icon - Free PNG & SVG 2273785 - Noun Project_files/1075238-200.png" alt="">
+        </nav> 
+    </header>
+    <main>
+        <nav class="navbar-grandfather">
+            <div class="navbar-father">
+                <h2 class="navbar-h2 quicksand-font"><span class="orange">Empowering</span> <br>
+                students from small <br> age <span class="blue">towards vision</span></h2>
+                <p class="navbar-discription">With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>  
+                <button class="btn-enroll">Enroll now</button>  
+            </div>
+            <div>
+                <img class="hero-img" src="assets/hero-kids.png" alt="">
+            </div>
+        </nav>
+        <nav class="Curriculum-card">
+            <div class="Standard-cur">
+                <h2>Standard Curriculum</h2>
+            </div>
+            <div class="standard-curriculum">
+                <div class="card-1">
+                    <img src="assets/kinder.png" alt="">
+                    <h2 class="kinder-1">Kinder(3-6) Years</h2>
+                    <p class="kinder-1-discription">Cum sociis natoque penatibus et magnis
+                    dis parturient montes, nascetur ridiculus
+                    mu sdis parturient</p>
+                    <h5 class="read-more">Read more</h5>    
+                </div>
+                <div class="card-2">
+                    <img src="assets/elementary.png" alt="">
+                    <h2 class="kinder-1">Elementary School</h2>
+                    <p class="kinder-1-discription">Cum sociis natoque penatibus et magnis
+                    dis parturient montes, nascetur ridiculus
+                    mu sdis parturient</p>
+                    <h5 class="read-more-2">Read more</h5>    
+                </div>
+                <div class="card-3">
+                    <img src="assets/middle.png" alt="">
+                    <h2 class="kinder-1">Middle (10-16) Years</h2>
+                    <p class="kinder-1-discription">Cum sociis natoque penatibus et magnis
+                    dis parturient montes, nascetur ridiculus
+                    mu sdis parturient</p>
+                    <h5 class="read-more-3">Read more</h5>    
+            </div>
+        </div>
+        </nav>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
