arrow button updated

--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
                     <h5 class="read-more-3">Read more</h5>    
             </div>
         </div>
+        <div class="arrow">
+            <img class="arrow-1" src="assets/arrow-left-long-solid.svg" alt="">
+            <img class="arrow-1" src="assets/arrow-right-long-solid.svg" alt="">
+        </div>
+        </nav>
+        <nav class="bg-img-2">
+            <div>
+                <h2>Our Stories</h2>
+            </div>
+            <div class="story-1">
+                <img src="assets/story-1.png" alt="">
+                <p>Nov 19,2019</p>
+                <p>A fun toddler coloring training on
+                classroom</p>
+                <p>Beautiful branding for changes by Never Now in Australia.
+                changes is a platform for open discussion in an inclusive and
+                collaborative environment, providing the...</p>
+
+            </div>
         </nav>
     </main>
     <footer>
