--- a/index.html
+++ b/index.html
@@ -70,24 +70,78 @@
             <img class="arrow-1" src="assets/arrow-right-long-solid.svg" alt="">
         </div>
         </nav>
-        <nav class="bg-img-2">
+        <nav class="navbar-3">
             <div>
-                <h2>Our Stories</h2>
+                <h2 class="Storie-main-header">Our Stories</h2>
             </div>
-            <div class="story-1">
-                <img src="assets/story-1.png" alt="">
-                <p>Nov 19,2019</p>
-                <p>A fun toddler coloring training on
-                classroom</p>
-                <p>Beautiful branding for changes by Never Now in Australia.
-                changes is a platform for open discussion in an inclusive and
-                collaborative environment, providing the...</p>
-
+            <div class="bg-img-gra">
+                <div class="story-1">
+                    <img class="img-story-1" src="assets/story-1.png" alt="">
+                    <p class="date-btn-1"> Nov 19,2019</p>
+                    <p class="story-1-head">A fun toddler coloring training on <br>
+                    classroom</p>
+                    <p class="story-1-description">Beautiful branding for changes by Never Now in Australia.
+                    changes is a platform for open discussion in an inclusive and
+                    collaborative environment, providing the...</p>
+                </div>
+                <div class="row">
+                    <div class="grid-container-1">
+                        <img class="img-container" src="assets/story-2.png" alt="">
+                        <p class="datebar-1">November 19,2019</p>
+                        <p class="dis-container-1">Find out if a school fits the
+                        family’s needs</p>
+                    </div>
+                    <div class="grid-container-1">
+                        <img class="img-container" src="assets/story-3.png" alt="">
+                        <p class="datebar-2">November 19,2019</p>
+                        <p class="dis-container-1">Summer math & literacy
+                        centres for kids</p>
+                    </div>
+                    <div class="grid-container-1">
+                        <img class="img-container" src="assets/story-4.png" alt="">
+                        <p class="datebar-1">November 19,2019</p>
+                        <p class="dis-container-1">Classroom management
+                            techniques for new tutors</p>
+                    </div>
+                    <div class="grid-container-1">
+                        <img class="img-container" src="assets/story-5.png" alt="">
+                        <p class="datebar-1">November 19,2019</p>
+                        <p class="dis-container-1">Conversation rhymes
+                            improve kids listening</p>
+                    </div>
+                    <div class="btn-father">
+                        <button class="btn-enroll-2">View All</button>
+                    </div>
+                </div>
             </div>
         </nav>
     </main>
     <footer>
-
+        <nav class="footer-main-nav">
+            <div class="footer-main">
+                <div class="flex-items">
+                    <img class="img-logo-2" src="assets/logo.png" alt="Logo">
+                    <h2 class="font-style">Kids Education</h2>
+                </div>
+                <p class="footer-dis">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            </div>            
+            <div class="int-sch">
+                <h2 class="int-sch">About School</h2>
+                <div class="int-sch-abo">
+                    <p>Home</p>
+                    <p>About</p>
+                    <p>Facilities</p>
+                    <p>Admission</p>
+                </div>
+            </div>
+            <div>
+                <h2 class="soc-link">Keep in touch</h2>
+                <img src="assets/fb.png" alt="">
+                <img src="assets/dribble.png" alt="">
+                <img src="assets/twitter.png" alt="">
+                <img src="assets/google+.png" alt="">
+            </div>
+        </nav>
     </footer>
 </body>
 </html>
